--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
 <div class="center">
+    
+    <meta name="google-site-verification" content="T26sQE74iMWdxe7E-v-tkwPcuBLQZ6TUcIXkkGlhL6w" />
+    
     <h1 id="word">
 <!--Text pertama-->
       <span class="letter">S</span>
